--- a/app/src/main/res/layout/timer.xml
+++ b/app/src/main/res/layout/timer.xml
@@ -8,10 +8,10 @@
         tools:ignore="HardcodedText">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             app:cardBackgroundColor="@color/app_red"
-            app:cardCornerRadius="100dp"
+            app:cardCornerRadius="150dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,14 +21,14 @@
             app:strokeWidth="0dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="200dp"
-                android:layout_height="200dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/min_actv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:textSize="45sp"
+                    android:textSize="60sp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/okra_medium"
                     android:maxLength="2"
@@ -43,7 +43,7 @@
                     android:id="@+id/separator_actv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="50sp"
+                    android:textSize="65sp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/okra_bold"
                     android:text=":"
@@ -57,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
-                    android:textSize="45sp"
+                    android:textSize="60sp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/okra_medium"
                     android:maxLength="2"
