--- a/app/src/main/res/layout/circuit_fragment.xml
+++ b/app/src/main/res/layout/circuit_fragment.xml
@@ -37,8 +37,18 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginTop="28dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/my_activity__aciv"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/my_activity__aciv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    app:srcCompat="@drawable/ic_avatar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/circuit_actv"
+                    app:layout_constraintBottom_toBottomOf="@id/circuit_actv"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/circuit_rv"
